/*
 * StreamTeam
 * Copyright (C) 2019  University of Basel
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package streamTeam.football;

option java_package = "ch.unibas.dmi.dbis.streamTeam.dataStreamElements.protobuf.football";
option java_outer_classname = "DuelEventStreamElementPayloadProtos";

// Payload of a duelEvent stream element
message DuelEventStreamElementPayload {
    // empty by intention
}

// Object identifiers, group identifiers and positions in the content:
// objectIdentifiers[0] = Identifier of the player who is defending the ball
// objectIdentifiers[1] = dentifier of the player who is attacking
// groupIdentifiers[0] = Identifier of the team whose player is defending the ball
// groupIdentifiers[1] = Identifier of the team whose player is attacking
// positions[0] = Position of the player who is defending the ball
// positions[1] = Position of the player who is attacking